--- a/app/src/main/res/layout/activity_guide_line.xml
+++ b/app/src/main/res/layout/activity_guide_line.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_begin="256dp" />
 
     <Button
         android:id="@+id/button14"
