--- a/app/src/main/res/layout/activity_percent_dimension.xml
+++ b/app/src/main/res/layout/activity_percent_dimension.xml
@@ -9,14 +9,14 @@
     <Button
         android:id="@+id/button13"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Button"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.5"
+        android:layout_height="0dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHeight_default="percent" />
 </android.support.constraint.ConstraintLayout>
