--- a/app/src/main/res/layout/activity_constraint_helper.xml
+++ b/app/src/main/res/layout/activity_constraint_helper.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/ic_android_black_72dp"
+        app:srcCompat="@drawable/ic_android_black_72dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteY="6dp" />
