--- a/app/src/main/res/layout/activity_place_holder.xml
+++ b/app/src/main/res/layout/activity_place_holder.xml
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:src="@drawable/ic_android_black_24dp"
+            app:srcCompat="@drawable/ic_android_black_24dp"
             android:text="A"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/image_b"
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:src="@drawable/ic_audiotrack_black_24dp"
+            app:srcCompat="@drawable/ic_audiotrack_black_24dp"
             android:text="B"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/image_c"
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:src="@drawable/ic_favorite_black_24dp"
+            app:srcCompat="@drawable/ic_favorite_black_24dp"
             android:text="C"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/image_d"
